Fix forgotten px for avatar.distorted

--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,11 +1,12 @@
 /* Add CSS Styling */
 
-.avatar.proportioned{
-    width: 300px;
+.avatar.proportioned {
     height: auto;
+    width: 300px;
 }
 
-.avatar.distorted{ 
-    width: 200;
-    height: 400;
+.avatar.distorted { 
+    height: 400px;
+    width: 200px;
 }
+
